--- a/rules/elasticsearch.yaml
+++ b/rules/elasticsearch.yaml
@@ -113,5 +113,5 @@ spec:
       for: 30m
       labels:
         severity: warning
-        asy_itsm_severity: medium
+        #asy_itsm_severity: medium #only occurs after shard cleanup once in a while, then always false positive.
 # TODO: Check nodes degraded from sensu saas?
